[package]
name = "track-rename"
version = "1.28.2"
edition = "2024"
authors = ["Esgrove <esgrove@outlook.com>"]
description = "CLI tool for formatting and renaming audio tracks"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/track-rename"
keywords = ["cli", "music", "audio", "rename"]
categories = ["command-line-utilities"]
default-run = "trackrename"
rust-version = "1.87"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
base64 = "0.22.1"
byteorder = "1.5.0"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.29.0"
dashmap = { version = "6.1.0", features = ["serde", "rayon", "inline"] }
difference = "2.0.0"
dirs = "6.0.0"
dunce = "1.0.5"
id3 = "1.16.2"
itertools = "0.14.0"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
titlecase = "3.5.0"
toml = "0.8.22"
trash = "5.2.2"
unicode-normalization = "0.1.24"
walkdir = "2.5.0"

[[bin]]
name = "trackrename"
path = "src/main.rs"

[[bin]]
name = "trackprint"
path = "src/bin/trackprint.rs"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
unwrap_used = "allow"
enum_glob_use = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cognitive_complexity = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
