[package]
name = "track-rename"
version = "1.30.3"
edition = "2024"
authors = ["Esgrove <esgrove@outlook.com>"]
description = "CLI tool for formatting and renaming audio tracks"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/track-rename"
keywords = ["cli", "music", "audio", "rename"]
categories = ["command-line-utilities"]
default-run = "trackrename"
rust-version = "1.89"

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
base64 = "0.22.1"
byteorder = "1.5.0"
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.65"
colored = "3.1.1"
crossterm = "0.29.0"
dashmap = { version = "6.1.0", features = ["serde", "rayon", "inline"] }
difference = "2.0.0"
dirs = "6.0.0"
dunce = "1.0.5"
id3 = "1.16.4"
itertools = "0.14.0"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
titlecase = "3.6.0"
toml = "0.9.10"
trash = "5.2.5"
unicode-normalization = "0.1.24"
walkdir = "2.5.0"

[[bin]]
name = "trackrename"
path = "src/main.rs"

[[bin]]
name = "trackprint"
path = "src/bin/trackprint.rs"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
unwrap_used = "deny"
enum_glob_use = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cognitive_complexity = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
